oar (2.0.0-beta11) unstable; urgency=low

  * add cpuset script comment for virtualization feature
  * debug draw-gantt

 -- Capit Nicolas <capitn@localdomain>  Mon, 13 Nov 2006 17:40:44 +0100

oar (2.0.0-beta10) unstable; urgency=low

  * security bug fix
  * add oarsh on the frontal
  * add patch for netbsd shell compliance
  * add "| ssh" in dependancies of debian packages (to be Sarge compliant)

 -- Capit Nicolas <capitn@localdomain>  Sun, 12 Nov 2006 05:16:38 +0100

oar (2.0.0-beta7) unstable; urgency=low

  * debug

 -- Capit Nicolas <capitn@localdomain>  Tue, 31 Oct 2006 16:38:36 +0100

oar (2.0.0-beta6) unstable; urgency=low

  * debug drawgantt packaging

 -- Capit Nicolas <capitn@localdomain>  Mon, 30 Oct 2006 19:13:42 +0100

oar (2.0.0-beta5) unstable; urgency=low

  * add cpuset banch management
  * bugfix
  * code enhancement (batch command line)
  * add --sql argument to several user commands (more flexible)

 -- Capit Nicolas <capitn@localdomain>  Mon, 30 Oct 2006 11:25:09 +0100

oar (2.0.0-beta4) unstable; urgency=low

  [ capitn ]
  * Add Suspend/Resume on jobs
  * --sql option in oarstat and oarnodes
  * debug

 -- Capit Nicolas <capitn@localdomain>  Thu, 19 Oct 2006 17:22:57 +0200

oar (2.0.0-beta3) unstable; urgency=low

  [ capitn ]
  * bug fix in oar.conf : replace "node ASC" by network_address

  [ Capit Nicolas ]

 -- Capit Nicolas <capitn@localdomain>  Thu, 19 Oct 2006 17:22:02 +0200

oar (2.0.0-beta2) unstable; urgency=low

  [ capitn ]
  * bug fix in sudoers

 -- Capit Nicolas <capitn@false>  Fri,  6 Oct 2006 11:04:00 +0200

oar (2.0.0-beta1) unstable; urgency=low

  [ capitn ]
  * new release

 -- Capit Nicolas <capitn@false>  Thu,  5 Oct 2006 11:18:31 +0200

oar (1.6.1) unstable; urgency=low

  [ Nicolas Capit ]
  * epilogue errors treatment enhancement
  * add -s option to oarnodes command --> show only state of nodes
  * add -l option to oarnodes command --> show only the node list
  * now root can delete all jobs like oar user