@@ -302,7 +302,8 @@ my %data_to_transfer = (
         name                => $job->{job_name},
         project             => $job->{project},
         reservation         => $job->{reservation},
-        walltime            => $moldable->{moldable_walltime},
+        walltime_seconds    => $moldable->{moldable_walltime},
+        walltime            => iolib::duration_to_sql($moldable->{moldable_walltime}),
         command             => $job->{command},
         challenge           => $job_challenge,
         almighty_hostname   => $Almighty_hostname,
